--- a/shippable.yml
+++ b/shippable.yml
@@ -12,7 +12,7 @@ build:
 
   pre_ci_boot:
     image_name: drydock/u14phpall
-    image_tag: prod
+    image_tag: master
     pull: true
     
   ci:
